--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,4 @@
-[package]
-name = "simde-rs"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-
 [workspace]
-members = ["./simde-sys"]
+members = [
+    "simde-sys",
+]
