--- a/simde-sys/Cargo.toml
+++ b/simde-sys/Cargo.toml
@@ -2,7 +2,12 @@
 name = "simde-sys"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+
+[build-dependencies]
+bindgen = "0.61.0"
